# Explainable-Christmas

./: Dockerfile  EAGE_Hackathon_2022_Explainable_Christmas.pptx  MLproject  README.md  pyproject.toml  requirements.txt  run-docker.sh
Attribute_Notebooks/: Run_Attribute_Generation_on_Full_Dataset.ipynb
Model-Evaluation-Notebooks/: Basic Model_Evaluation.ipynb
SHAP_Notebooks/: Shap_Evaluation.ipynb
mlruns/0/: meta.yaml
mlruns/0/19cc549a15b343b2bf7d8eb2068782bb/: meta.yaml
mlruns/0/19cc549a15b343b2bf7d8eb2068782bb/artifacts/: model_summary.txt
mlruns/0/19cc549a15b343b2bf7d8eb2068782bb/artifacts/model/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
mlruns/0/19cc549a15b343b2bf7d8eb2068782bb/artifacts/tensorboard_logs/train/: events.out.tfevents.1654452105.b0ba4e7d1923.2546.0.v2
mlruns/0/19cc549a15b343b2bf7d8eb2068782bb/artifacts/tensorboard_logs/validation/: events.out.tfevents.1654452116.b0ba4e7d1923.2546.1.v2
mlruns/0/19cc549a15b343b2bf7d8eb2068782bb/metrics/: accuracy  auc  fn  fp  loss  precision  recall  restored_epoch  stopped_epoch  tn  tp  val_accuracy  val_auc  val_fn  val_fp  val_loss  val_precision  val_recall  val_tn  val_tp
mlruns/0/19cc549a15b343b2bf7d8eb2068782bb/params/: monitor
mlruns/0/19cc549a15b343b2bf7d8eb2068782bb/tags/: mlflow.log-model.history  mlflow.source.git.commit  mlflow.source.name
pipeline/: build_model.py  explain.py  process_data.py  segregate.py  train.py  utils.py
pipeline/data/: sample_submission.csv  train.csv
pipeline/outputs/: expected_values.npy
(+3 files in other folders)
